// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > accessRequest > patchAccessRequest > 200 > ok 1`] = `
{
  "accessRequest": {
    "_id": "test",
  },
}
`;

exports[`routes > accessRequest > patchAccessRequest > 400 > no name 1`] = `
{
  "error": {
    "context": {
      "errors": [
        {
          "code": "invalid_type",
          "expected": "string",
          "message": "Required",
          "path": [
            "body",
            "metadata",
            "overview",
            "name",
          ],
          "received": "undefined",
        },
      ],
    },
    "message": "Path: body.metadata.overview.name - Message: Required",
    "name": "Bailo Error",
  },
}
`;

exports[`routes > accessRequest > patchAccessRequest > audit > expected call 1`] = `
{
  "_id": "test",
}
`;
